# NovaSdr

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  conversation historie.md  windows_fix_for_OpenHPSDR_Zeus.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/analysis/: 00_executive_summary.md  01_inventarisatie_deskhpsdr.md  01_inventarisatie_thetis.md  01_inventarisatie_zeus.md  02_architectuur_per_project.md  02_referentie_sdrpp_sdrangel.md  03_protocol_hardware_analyse.md  04_dsp_audio_analyse.md  05_ui_ux_analyse.md  06_integratie_plugins.md  07_extra_hardware_compatibility.md  08_multi_device_rx2.md  09_vergelijkingsmatrix.md  10_doel_architectuur.md  11_tech_stack.md  12_migratieplan.md  13_risicoanalyse.md  14_aanbevelingen_open_vragen.md  README.md
src/: .gitkeep  ATTRIBUTIONS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NovaSdr.slnx  PantheonSDR.slnx  README.md  SECURITY.md
src/NovaSdr/: NovaSdr.csproj
src/NovaSdr.Devices/: DeviceCapabilities.cs  DeviceOpenOptions.cs  DeviceRegistry.cs  FrequencyRange.cs  IDeviceSource.cs  ITransceiver.cs  IqBlock.cs  NovaSdr.Devices.csproj  TxFeedbackBlock.cs  WdspChannelAllocator.cs
src/NovaSdr.Devices/OpenHpsdr/: OpenHpsdrDiscovery.cs  OpenHpsdrP1Transceiver.cs  OpenHpsdrP2Transceiver.cs
src/NovaSdr.Devices/PlutoSdr/: IioNativeMethods.cs  PlutoEnumerator.cs  PlutoSdrTransceiver.cs
src/NovaSdr.Devices/Resampling/: SampleRateBridge.cs
src/NovaSdr.Devices/SdrPlay/: SdrplayEnumerator.cs  SdrplayNativeMethods.cs  SdrplaySource.cs
src/NovaSdr.Devices/Session/: AttachedDevice.cs  AudioRoute.cs  DeviceCoordinatorService.cs  DeviceRole.cs  DiscoveryAggregatorService.cs  FreqSyncPolicy.cs  RadioSession.cs  Rx2PipelineService.cs
src/PantheonSDR/: PantheonSDR.csproj  Program.cs
src/PantheonSDR.Devices/: DeviceCapabilities.cs  DeviceOpenOptions.cs  DeviceRegistry.cs  FrequencyRange.cs  IDeviceSource.cs  ITransceiver.cs  IqBlock.cs  PantheonSDR.Devices.csproj  TxFeedbackBlock.cs  WdspChannelAllocator.cs
src/PantheonSDR.Devices/OpenHpsdr/: OpenHpsdrDiscovery.cs  OpenHpsdrP1Transceiver.cs  OpenHpsdrP2Transceiver.cs
src/PantheonSDR.Devices/PlutoSdr/: IioNativeMethods.cs  PlutoEnumerator.cs  PlutoSdrTransceiver.cs
src/PantheonSDR.Devices/Resampling/: SampleRateBridge.cs
src/PantheonSDR.Devices/SdrPlay/: SdrplayEnumerator.cs  SdrplayNativeMethods.cs  SdrplaySource.cs
src/PantheonSDR.Devices/Session/: AttachedDevice.cs  AudioRoute.cs  DeviceCoordinatorService.cs  DeviceRole.cs  DiscoveryAggregatorService.cs  FreqSyncPolicy.cs  RadioSession.cs  Rx2PipelineService.cs
src/Zeus.Contracts/: AlertFrame.cs  AudioFrame.cs  AudioMasterBypassFrame.cs  BandPlanDtos.cs  BoardCapabilities.cs  CwEngineStatusFrame.cs  DisplayFrame.cs  Dtos.cs  FilterFrame.cs  HpsdrBoardKind.cs  LogDtos.cs  MoxStateFrame.cs  MsgType.cs  OrionMkIIVariant.cs  PaTempFrame.cs  PsMetersFrame.cs  QrzDtos.cs  RadioCalibration.cs  RotctldDtos.cs  RxMeterFrame.cs  RxMetersV2Frame.cs  TciDtos.cs  TxMetersFrame.cs  TxMetersV2Frame.cs  WireFormat.cs  WisdomStatusFrame.cs
src/Zeus.Contracts/Session/: SessionDtos.cs
src/Zeus.Dsp/: DspEngineFactory.cs  IDspEngine.cs  PsStageMeters.cs  RxStageMeters.cs  SyntheticDspEngine.cs  TxStageMeters.cs
src/Zeus.Dsp/Wdsp/: NativeMethods.cs  WdspDspEngine.cs  WdspNativeLoader.cs  WdspWisdomInitializer.cs
src/Zeus.Plugins.Host/Audio/: AudioChain.cs
src/Zeus.Protocol1/: AssemblyInfo.cs  ControlFrame.cs  HpsdrEnums.cs  IRadioTransport.cs  IRxCodecAudioSource.cs  IRxPacketSink.cs  ITxIqSource.cs  IqFrame.cs  N2adrBands.cs  Protocol1Client.cs  PsFeedbackFrame.cs  RxCodecAudioRing.cs  TestToneGenerator.cs  TxIqRing.cs
src/Zeus.Protocol1/Discovery/: DiscoveredRadio.cs  IRadioDiscovery.cs  RadioDiscoveryService.cs  ReplyParser.cs
src/Zeus.Protocol2/: AssemblyInfo.cs  IRxPacketSink.cs  IqFrame.cs  P2TelemetryReading.cs  Protocol2Client.cs  PsFeedbackFrame.cs  Zeus.Protocol2.csproj
src/Zeus.Protocol2/Discovery/: DiscoveredRadio.cs  IRadioDiscovery.cs  RadioDiscoveryService.cs  ReplyParser.cs
src/Zeus.Server.Hosting/: AudioChainMasterBypassService.cs  AudioChainSettingsStore.cs  AudioPluginBridge.cs  BandMemoryStore.cs  BandPlanService.cs  BandPlanStore.cs  BandPrefsStore.cs  BandUtils.cs  BoardCapabilitiesTable.cs  BottomPinStore.cs  CredentialStore.cs  CwEngine.cs  CwOffset.cs  CwSettingsStore.cs  DisplaySettingsStore.cs  DspPipelineService.cs  DspSettingsStore.cs  ExternalPttService.cs  FilterPresetStore.cs  FilterPresets.cs  LanCertificate.cs  LayoutStore.cs  MeterDisplaySettingsStore.cs  NrUiPrefsStore.cs  PaDefaults.cs  PanWfSplitStore.cs  PreferredRadioStore.cs  PrefsDbPath.cs  PsSettingsStore.cs  RadioCalibrations.cs  RadioCodecAudioSink.cs  RadioDriveProfile.cs  RadioService.cs  RadioStateStore.cs  RotctldService.cs  SessionEndpoints.cs  SpscRing.cs  StreamingHub.cs  TciConfigStore.cs  TciManagementService.cs  (+7 more)
src/Zeus.Server.Hosting/BandPlans/: EI.segments.json  G.segments.json  IARU_R1.segments.json  IARU_R2.segments.json  (+4 more)
src/docs/: BOARD_OVERRIDE_IMPLEMENTATION.md  IMPLEMENTATION-SUMMARY.md  INSTALLATION.md  RELEASE.md  discovery.approach.md  performance_tuning.md  puresignal_usage.md  tci-test-plan.md
src/installers/: create-linux-package.sh  create-macos-app.sh  zeus-macos.entitlements
src/native/: README.md
src/native/wdsp/: CMakeLists.txt  RXA.c  RXA.h  TXA.c  TXA.h  amd.c  amd.h  ammod.c  ammod.h  amsq.c  amsq.h  analyzer.c  analyzer.h  anf.c  anf.h  anr.c  anr.h  apfshadow.c  apfshadow.h  bandpass.c  bandpass.h  calcc.c  calcc.h  calculus.c  cblock.c  cblock.h  cfcomp.c  cfcomp.h  cfir.c  cfir.h  channel.c  channel.h  cmath.c  comm.h  compress.c  compress.h  delay.c  delay.h  dexp.c  dexp.h  (+97 more)
src/native/wdsp/stubs/nr3/: rnnoise.h  rnnr_stub.c
src/native/wdsp/stubs/nr4/: sbnr_stub.c  specbleach_adenoiser.h
src/zeus-mobile/: .gitignore  README.md  capacitor.config.ts  package-lock.json  package.json
src/zeus-web/: eslint.config.js  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
(+366 files in other folders)
